@@ -23,10 +23,9 @@ object Build extends Build {
       name := "reftool5",
       organization := "com.reftool5",
       version := "0.1-SNAPSHOT",
-      javaOptions ++= Seq("-Xms100m", "-Xmx300m"), // TODO sbt-idea bug: set also in idea
+      javaOptions ++= Seq("-Xms100m", "-Xmx300m"),
       scalaVersion := "2.11.6",
       scalacOptions ++= Seq("-feature", "-unchecked", "-deprecation", "-encoding", "UTF-8"),
-      // javaOptions in run += "-XX:MaxPermSize=256m",
       libraryDependencies ++= Seq(
         "org.scalafx" %% "scalafx" % "8.0.40-R8",
         "com.typesafe.akka" %% "akka-actor" % "2.3.9",
